Updated Portfolio with Links to Trivia Game

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,10 @@
 
 						<div class="row">
 							<div class="col-md-6 pfgrp">
-                                <img class="pfimg" src="assets/images/000.jpg"  alt="Word Guess">
-								<button class="pfbtn">Word Guess</button>
+								<a href="https://selmadelgado.github.io/Steve-Jobs-Trivia-Game/" target="blank">
+									<img class="pfimg" src="assets/images/trivia-game.png"  alt="Trivia Game">
+								</a>
+								<!-- <button class="pfbtn">Trivia Game</button> -->
 							</div>
 							<div class="col-md-6 pfgrp">
 								<img class="pfimg" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">					
