--- a/portfolio.html
+++ b/portfolio.html
@@ -51,14 +51,17 @@
 
 						<div class="row">
 							<div class="col-md-6 pfgrp">
+                                 <img class="pfimg" src="assets/images/trivia-game.png"  alt="Trivia Game">
 								<a href="https://selmadelgado.github.io/Steve-Jobs-Trivia-Game/" target="blank">
-									<img class="pfimg" src="assets/images/trivia-game.png"  alt="Trivia Game">
+									<button class="pfbtn">Trivia Game</button>
 								</a>
-								<!-- <button class="pfbtn">Trivia Game</button> -->
 							</div>
+                             
 							<div class="col-md-6 pfgrp">
-								<img class="pfimg" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">					
-								<button class="pfbtn">RPG Game</button>
+                                 <img class="pfimg" src="assets/images/pixar.png"  alt="Trivia Game">
+								<a href="https://selmadelgado.github.io/GifTastic/" target="blank">
+									<button class="pfbtn">GifTastic Pixar</button>
+								</a>
 							</div>
 						</div>
 
